// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sku-webpack-plugin build should create valid app 1`] = `
"<!doctype html>
<html>
  <head>
    <meta charset="utf-8">
    <title>
      Webpack App
    </title>
    <meta
      name="viewport"
      content="width=device-width,initial-scale=1"
    >
    <script
      defer="defer"
      src="main.js"
    >
    </script>
    <link
      href="main.css"
      rel="stylesheet"
    >
  </head>
  <body>
  </body>
</html>"
POST HYDRATE DIFFS: 
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -20,5 +20,18 @@
     >
   </head>
   <body>
+    <div>
+      <style type="text/css">
+        html,body{margin:0;padding:0;background:#F7F8FB}
+            html._1eg1f1fz,html._1eg1f1fz body{color-scheme:dark;background:#0E131B}
+      </style>
+      <div class="_1jnuepa0 _1e31qyr18 _1e31qyr1b">
+        <div class="_1t01khz0 _1eg1f1f7i _1eg1f1f6e _1eg1f1f9q _1eg1f1f8m _1eg1f1f5e _1e31qyr18 _1e31qyr1b _1eg1f1f32 _1eg1f1f35">
+          <span class="_1t01khz0 _1eg1f1f4y _1e31qyr0 _1e31qyr1 _1e31qyr21 mowtpn4 _1e31qyrd">
+            Is it working?
+          </span>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
\\ No newline at end of file

`;

exports[`sku-webpack-plugin build should generate the expected files 1`] = `
{
  "index.html": "<!doctype html><html><head><meta charset="utf-8"><title>Webpack App</title><meta name="viewport" content="width=device-width,initial-scale=1"><script defer="defer" src="main.js"></script><link href="main.css" rel="stylesheet"></head><body></body></html>",
  "main.css": ._1t01khz0 {
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  -webkit-tap-highlight-color: transparent;
}
[data-braid-hidefocusrings] ._1t01khz0 {
  outline: none;
}
._1t01khz1 {
  display: block;
}
._1t01khz2 {
  line-height: 1;
}
._1t01khz3 {
  list-style: none;
}
._1t01khz4 {
  quotes: none;
}
._1t01khz4:after,
._1t01khz4:before {
  content: "";
}
._1t01khz5 {
  border-collapse: collapse;
  border-spacing: 0;
}
._1t01khz6 {
  -webkit-appearance: none;
  appearance: none;
}
._1t01khz7 {
  background-color: transparent;
}
._1t01khz9 {
  color: inherit;
}
._1t01khza:disabled {
  opacity: 1;
}
._1t01khza::-ms-expand {
  display: none;
}
._1t01khzc[type="number"] {
  -moz-appearance: textfield;
}
._1t01khzc[type="number"]::-webkit-inner-spin-button,
._1t01khzc[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}
._1t01khzc::-ms-clear {
  display: none;
}
._1t01khzc::-webkit-search-cancel-button {
  -webkit-appearance: none;
}
._1t01khzf {
  color: inherit;
  text-decoration: none;
}
._1eg1f1f0 {
  overflow: hidden;
}
._1eg1f1f1 {
  overflow: scroll;
}
._1eg1f1f2 {
  overflow: visible;
}
._1eg1f1f3 {
  overflow: auto;
}
._1eg1f1f4 {
  -webkit-user-select: none;
  user-select: none;
}
._1eg1f1f5 {
  outline: none;
}
._1eg1f1f6 {
  opacity: 0;
}
._1eg1f1f7 {
  z-index: 0;
}
._1eg1f1f8 {
  z-index: 1;
}
._1eg1f1f9 {
  z-index: 2;
}
._1eg1f1fa {
  z-index: 90;
}
._1eg1f1fb {
  z-index: 100;
}
._1eg1f1fc {
  z-index: 200;
}
._1eg1f1fd {
  z-index: 290;
}
._1eg1f1fe {
  z-index: 300;
}
._1eg1f1ff {
  z-index: 400;
}
._1eg1f1fg {
  cursor: default;
}
._1eg1f1fh {
  cursor: pointer;
}
._1eg1f1fi {
  pointer-events: none;
}
._1eg1f1fj {
  top: 0;
}
._1eg1f1fk {
  bottom: 0;
}
._1eg1f1fl {
  left: 0;
}
._1eg1f1fm {
  right: 0;
}
._1eg1f1fn {
  height: 100%;
}
._1eg1f1fo {
  height: var(--r4uo659);
}
._1eg1f1fp {
  width: 100%;
}
._1eg1f1fq {
  width: var(--r4uo659);
}
._1eg1f1fr {
  min-width: 0;
}
._1eg1f1fs {
  max-width: var(--r4uo6511);
}
._1eg1f1ft {
  max-width: var(--r4uo6512);
}
._1eg1f1fu {
  max-width: var(--r4uo6513);
}
._1eg1f1fv {
  max-width: var(--r4uo6514);
}
._1eg1f1fw {
  transition: var(--r4uo655i);
}
._1eg1f1fx {
  transition: var(--r4uo655j);
}
._1eg1f1fy:active {
  transform: var(--r4uo655k);
}
html._1eg1f1fz ._1eg1f1f11,
html:not(._1eg1f1fz) ._1eg1f1f10 {
  background: var(--r4uo651t);
}
html._1eg1f1fz ._1eg1f1f13,
html:not(._1eg1f1fz) ._1eg1f1f12 {
  background: var(--r4uo651u);
}
html._1eg1f1fz ._1eg1f1f15,
html:not(._1eg1f1fz) ._1eg1f1f14 {
  background: var(--r4uo651v);
}
html._1eg1f1fz ._1eg1f1f17,
html:not(._1eg1f1fz) ._1eg1f1f16 {
  background: var(--r4uo651w);
}
html._1eg1f1fz ._1eg1f1f19,
html:not(._1eg1f1fz) ._1eg1f1f18 {
  background: var(--r4uo651x);
}
html._1eg1f1fz ._1eg1f1f1b,
html:not(._1eg1f1fz) ._1eg1f1f1a {
  background: var(--r4uo651y);
}
html._1eg1f1fz ._1eg1f1f1d,
html:not(._1eg1f1fz) ._1eg1f1f1c {
  background: var(--r4uo651z);
}
html._1eg1f1fz ._1eg1f1f1f,
html:not(._1eg1f1fz) ._1eg1f1f1e {
  background: var(--r4uo6520);
}
html._1eg1f1fz ._1eg1f1f1h,
html:not(._1eg1f1fz) ._1eg1f1f1g {
  background: var(--r4uo6521);
}
html._1eg1f1fz ._1eg1f1f1j,
html:not(._1eg1f1fz) ._1eg1f1f1i {
  background: var(--r4uo6522);
}
html._1eg1f1fz ._1eg1f1f1l,
html:not(._1eg1f1fz) ._1eg1f1f1k {
  background: var(--r4uo6523);
}
html._1eg1f1fz ._1eg1f1f1n,
html:not(._1eg1f1fz) ._1eg1f1f1m {
  background: var(--r4uo6524);
}
html._1eg1f1fz ._1eg1f1f1p,
html:not(._1eg1f1fz) ._1eg1f1f1o {
  background: var(--r4uo6525);
}
html._1eg1f1fz ._1eg1f1f1r,
html:not(._1eg1f1fz) ._1eg1f1f1q {
  background: var(--r4uo6526);
}
html._1eg1f1fz ._1eg1f1f1t,
html:not(._1eg1f1fz) ._1eg1f1f1s {
  background: var(--r4uo6527);
}
html._1eg1f1fz ._1eg1f1f1v,
html:not(._1eg1f1fz) ._1eg1f1f1u {
  background: var(--r4uo6528);
}
html._1eg1f1fz ._1eg1f1f1x,
html:not(._1eg1f1fz) ._1eg1f1f1w {
  background: var(--r4uo6529);
}
html._1eg1f1fz ._1eg1f1f1z,
html:not(._1eg1f1fz) ._1eg1f1f1y {
  background: var(--r4uo652a);
}
html._1eg1f1fz ._1eg1f1f21,
html:not(._1eg1f1fz) ._1eg1f1f20 {
  background: var(--r4uo652b);
}
html._1eg1f1fz ._1eg1f1f23,
html:not(._1eg1f1fz) ._1eg1f1f22 {
  background: var(--r4uo652c);
}
html._1eg1f1fz ._1eg1f1f25,
html:not(._1eg1f1fz) ._1eg1f1f24 {
  background: var(--r4uo652d);
}
html._1eg1f1fz ._1eg1f1f27,
html:not(._1eg1f1fz) ._1eg1f1f26 {
  background: var(--r4uo652e);
}
html._1eg1f1fz ._1eg1f1f29,
html:not(._1eg1f1fz) ._1eg1f1f28 {
  background: var(--r4uo652f);
}
html._1eg1f1fz ._1eg1f1f2b,
html:not(._1eg1f1fz) ._1eg1f1f2a {
  background: var(--r4uo652g);
}
html._1eg1f1fz ._1eg1f1f2d,
html:not(._1eg1f1fz) ._1eg1f1f2c {
  background: var(--r4uo652h);
}
html._1eg1f1fz ._1eg1f1f2f,
html:not(._1eg1f1fz) ._1eg1f1f2e {
  background: var(--r4uo652i);
}
html._1eg1f1fz ._1eg1f1f2h,
html:not(._1eg1f1fz) ._1eg1f1f2g {
  background: var(--r4uo652j);
}
html._1eg1f1fz ._1eg1f1f2j,
html:not(._1eg1f1fz) ._1eg1f1f2i {
  background: var(--r4uo652k);
}
html._1eg1f1fz ._1eg1f1f2l,
html:not(._1eg1f1fz) ._1eg1f1f2k {
  background: var(--r4uo652l);
}
html._1eg1f1fz ._1eg1f1f2n,
html:not(._1eg1f1fz) ._1eg1f1f2m {
  background: var(--r4uo652m);
}
html._1eg1f1fz ._1eg1f1f2p,
html:not(._1eg1f1fz) ._1eg1f1f2o {
  background: var(--r4uo652n);
}
html._1eg1f1fz ._1eg1f1f2r,
html:not(._1eg1f1fz) ._1eg1f1f2q {
  background: var(--r4uo652o);
}
html._1eg1f1fz ._1eg1f1f2t,
html:not(._1eg1f1fz) ._1eg1f1f2s {
  background: var(--r4uo652p);
}
html._1eg1f1fz ._1eg1f1f2v,
html:not(._1eg1f1fz) ._1eg1f1f2u {
  background: var(--r4uo652q);
}
html._1eg1f1fz ._1eg1f1f2x,
html:not(._1eg1f1fz) ._1eg1f1f2w {
  background: var(--r4uo652r);
}
html._1eg1f1fz ._1eg1f1f2z,
html:not(._1eg1f1fz) ._1eg1f1f2y {
  background: var(--r4uo652s);
}
html._1eg1f1fz ._1eg1f1f31,
html:not(._1eg1f1fz) ._1eg1f1f30 {
  background: var(--r4uo652t);
}
html._1eg1f1fz ._1eg1f1f33,
html:not(._1eg1f1fz) ._1eg1f1f32 {
  background: var(--r4uo652u);
}
html._1eg1f1fz ._1eg1f1f35,
html:not(._1eg1f1fz) ._1eg1f1f34 {
  background: var(--r4uo652v);
}
html._1eg1f1fz ._1eg1f1f37,
html:not(._1eg1f1fz) ._1eg1f1f36 {
  box-shadow: var(--r4uo655l);
}
html._1eg1f1fz ._1eg1f1f39,
html:not(._1eg1f1fz) ._1eg1f1f38 {
  box-shadow: var(--r4uo655m);
}
html._1eg1f1fz ._1eg1f1f3b,
html:not(._1eg1f1fz) ._1eg1f1f3a {
  box-shadow: var(--r4uo655n);
}
html._1eg1f1fz ._1eg1f1f3d,
html:not(._1eg1f1fz) ._1eg1f1f3c {
  box-shadow: inset 0 0 0 var(--r4uo65y) var(--r4uo65f);
}
html._1eg1f1fz ._1eg1f1f3f,
html:not(._1eg1f1fz) ._1eg1f1f3e {
  box-shadow: inset 0 0 0 var(--r4uo65y) var(--r4uo65g);
}
html._1eg1f1fz ._1eg1f1f3h,
html:not(._1eg1f1fz) ._1eg1f1f3g {
  box-shadow: inset 0 0 0 var(--r4uo65z) var(--r4uo65f);
}
html._1eg1f1fz ._1eg1f1f3j,
html:not(._1eg1f1fz) ._1eg1f1f3i {
  box-shadow: inset 0 0 0 var(--r4uo65z) var(--r4uo65g);
}
html._1eg1f1fz ._1eg1f1f3l,
html:not(._1eg1f1fz) ._1eg1f1f3k {
  box-shadow: inset 0 0 0 var(--r4uo65y) var(--r4uo65h);
}
html._1eg1f1fz ._1eg1f1f3n,
html:not(._1eg1f1fz) ._1eg1f1f3m {
  box-shadow: inset 0 0 0 var(--r4uo65y) var(--r4uo65i);
}
html._1eg1f1fz ._1eg1f1f3p,
html:not(._1eg1f1fz) ._1eg1f1f3o {
  box-shadow: inset 0 0 0 var(--r4uo65y) var(--r4uo65j);
}
html._1eg1f1fz ._1eg1f1f3r,
html:not(._1eg1f1fz) ._1eg1f1f3q {
  box-shadow: inset 0 0 0 var(--r4uo65z) var(--r4uo65j);
}
html._1eg1f1fz ._1eg1f1f3t,
html:not(._1eg1f1fz) ._1eg1f1f3s {
  box-shadow: inset 0 0 0 var(--r4uo65y) var(--r4uo65k);
}
html._1eg1f1fz ._1eg1f1f3v,
html:not(._1eg1f1fz) ._1eg1f1f3u {
  box-shadow: inset 0 0 0 var(--r4uo65z) var(--r4uo65k);
}
html._1eg1f1fz ._1eg1f1f3x,
html:not(._1eg1f1fz) ._1eg1f1f3w {
  box-shadow: inset 0 0 0 var(--r4uo65y) var(--r4uo65l);
}
html._1eg1f1fz ._1eg1f1f3z,
html:not(._1eg1f1fz) ._1eg1f1f3y {
  box-shadow: inset 0 0 0 var(--r4uo65y) var(--r4uo65n);
}
html._1eg1f1fz ._1eg1f1f41,
html:not(._1eg1f1fz) ._1eg1f1f40 {
  box-shadow: inset 0 0 0 var(--r4uo65z) var(--r4uo65n);
}
html._1eg1f1fz ._1eg1f1f43,
html:not(._1eg1f1fz) ._1eg1f1f42 {
  box-shadow: inset 0 0 0 var(--r4uo65y) var(--r4uo65o);
}
html._1eg1f1fz ._1eg1f1f45,
html:not(._1eg1f1fz) ._1eg1f1f44 {
  box-shadow: inset 0 0 0 var(--r4uo65z) var(--r4uo65o);
}
html._1eg1f1fz ._1eg1f1f47,
html:not(._1eg1f1fz) ._1eg1f1f46 {
  box-shadow: inset 0 0 0 var(--r4uo65y) var(--r4uo65p);
}
html._1eg1f1fz ._1eg1f1f49,
html:not(._1eg1f1fz) ._1eg1f1f48 {
  box-shadow: inset 0 0 0 var(--r4uo65y) var(--r4uo65q);
}
html._1eg1f1fz ._1eg1f1f4b,
html:not(._1eg1f1fz) ._1eg1f1f4a {
  box-shadow: inset 0 0 0 var(--r4uo65y) var(--r4uo65r);
}
html._1eg1f1fz ._1eg1f1f4d,
html:not(._1eg1f1fz) ._1eg1f1f4c {
  box-shadow: inset 0 0 0 var(--r4uo65z) var(--r4uo65r);
}
html._1eg1f1fz ._1eg1f1f4f,
html:not(._1eg1f1fz) ._1eg1f1f4e {
  box-shadow: inset 0 0 0 var(--r4uo65y) var(--r4uo65s);
}
html._1eg1f1fz ._1eg1f1f4h,
html:not(._1eg1f1fz) ._1eg1f1f4g {
  box-shadow: inset 0 0 0 var(--r4uo65z) var(--r4uo65s);
}
html._1eg1f1fz ._1eg1f1f4j,
html:not(._1eg1f1fz) ._1eg1f1f4i {
  box-shadow: inset 0 0 0 var(--r4uo65y) var(--r4uo65t);
}
html._1eg1f1fz ._1eg1f1f4l,
html:not(._1eg1f1fz) ._1eg1f1f4k {
  box-shadow: inset 0 0 0 var(--r4uo65y) var(--r4uo65u);
}
html._1eg1f1fz ._1eg1f1f4n,
html:not(._1eg1f1fz) ._1eg1f1f4m {
  box-shadow: inset 0 0 0 var(--r4uo65y) var(--r4uo65v);
}
html._1eg1f1fz ._1eg1f1f4p,
html:not(._1eg1f1fz) ._1eg1f1f4o {
  box-shadow: inset 0 0 0 var(--r4uo65y) var(--r4uo65w);
}
html._1eg1f1fz ._1eg1f1f4r,
html:not(._1eg1f1fz) ._1eg1f1f4q {
  box-shadow: inset 0 0 0 var(--r4uo65y) var(--r4uo65x);
}
html._1eg1f1fz ._1eg1f1f4t,
html:not(._1eg1f1fz) ._1eg1f1f4s {
  box-shadow: 0 0 0 var(--r4uo6510) var(--r4uo65m);
}
._1eg1f1f4u {
  display: none;
}
._1eg1f1f4y {
  display: block;
}
._1eg1f1f52 {
  display: inline;
}
._1eg1f1f56 {
  display: inline-block;
}
._1eg1f1f5a {
  display: flex;
}
._1eg1f1f5e {
  position: relative;
}
._1eg1f1f5i {
  position: absolute;
}
._1eg1f1f5m {
  position: fixed;
}
._1eg1f1f5q {
  border-radius: 0;
}
._1eg1f1f5u {
  border-radius: 9999px;
}
._1eg1f1f5y {
  border-radius: var(--r4uo65b);
}
._1eg1f1f62 {
  border-radius: var(--r4uo65c);
}
._1eg1f1f66 {
  border-radius: var(--r4uo65d);
}
._1eg1f1f6a {
  border-radius: var(--r4uo65e);
}
._1eg1f1f6e {
  padding-top: var(--r4uo650);
}
._1eg1f1f6i {
  padding-top: var(--r4uo651);
}
._1eg1f1f6m {
  padding-top: var(--r4uo652);
}
._1eg1f1f6q {
  padding-top: var(--r4uo653);
}
._1eg1f1f6u {
  padding-top: var(--r4uo654);
}
._1eg1f1f6y {
  padding-top: var(--r4uo655);
}
._1eg1f1f72 {
  padding-top: var(--r4uo656);
}
._1eg1f1f76 {
  padding-top: var(--r4uo657);
}
._1eg1f1f7a {
  padding-top: var(--r4uo658);
}
._1eg1f1f7e {
  padding-top: 0;
}
._1eg1f1f7i {
  padding-bottom: var(--r4uo650);
}
._1eg1f1f7m {
  padding-bottom: var(--r4uo651);
}
._1eg1f1f7q {
  padding-bottom: var(--r4uo652);
}
._1eg1f1f7u {
  padding-bottom: var(--r4uo653);
}
._1eg1f1f7y {
  padding-bottom: var(--r4uo654);
}
._1eg1f1f82 {
  padding-bottom: var(--r4uo655);
}
._1eg1f1f86 {
  padding-bottom: var(--r4uo656);
}
._1eg1f1f8a {
  padding-bottom: var(--r4uo657);
}
._1eg1f1f8e {
  padding-bottom: var(--r4uo658);
}
._1eg1f1f8i {
  padding-bottom: 0;
}
._1eg1f1f8m {
  padding-right: var(--r4uo650);
}
._1eg1f1f8q {
  padding-right: var(--r4uo651);
}
._1eg1f1f8u {
  padding-right: var(--r4uo652);
}
._1eg1f1f8y {
  padding-right: var(--r4uo653);
}
._1eg1f1f92 {
  padding-right: var(--r4uo654);
}
._1eg1f1f96 {
  padding-right: var(--r4uo655);
}
._1eg1f1f9a {
  padding-right: var(--r4uo656);
}
._1eg1f1f9e {
  padding-right: var(--r4uo657);
}
._1eg1f1f9i {
  padding-right: var(--r4uo658);
}
._1eg1f1f9m {
  padding-right: 0;
}
._1eg1f1f9q {
  padding-left: var(--r4uo650);
}
._1eg1f1f9u {
  padding-left: var(--r4uo651);
}
._1eg1f1f9y {
  padding-left: var(--r4uo652);
}
._1eg1f1fa2 {
  padding-left: var(--r4uo653);
}
._1eg1f1fa6 {
  padding-left: var(--r4uo654);
}
._1eg1f1faa {
  padding-left: var(--r4uo655);
}
._1eg1f1fae {
  padding-left: var(--r4uo656);
}
._1eg1f1fai {
  padding-left: var(--r4uo657);
}
._1eg1f1fam {
  padding-left: var(--r4uo658);
}
._1eg1f1faq {
  padding-left: 0;
}
._1eg1f1fau {
  margin-top: var(--r4uo650);
}
._1eg1f1fay {
  margin-top: var(--r4uo651);
}
._1eg1f1fb2 {
  margin-top: var(--r4uo652);
}
._1eg1f1fb6 {
  margin-top: var(--r4uo653);
}
._1eg1f1fba {
  margin-top: var(--r4uo654);
}
._1eg1f1fbe {
  margin-top: var(--r4uo655);
}
._1eg1f1fbi {
  margin-top: var(--r4uo656);
}
._1eg1f1fbm {
  margin-top: var(--r4uo657);
}
._1eg1f1fbq {
  margin-top: var(--r4uo658);
}
._1eg1f1fbu {
  margin-top: 0;
}
._1eg1f1fby {
  margin-bottom: var(--r4uo650);
}
._1eg1f1fc2 {
  margin-bottom: var(--r4uo651);
}
._1eg1f1fc6 {
  margin-bottom: var(--r4uo652);
}
._1eg1f1fca {
  margin-bottom: var(--r4uo653);
}
._1eg1f1fce {
  margin-bottom: var(--r4uo654);
}
._1eg1f1fci {
  margin-bottom: var(--r4uo655);
}
._1eg1f1fcm {
  margin-bottom: var(--r4uo656);
}
._1eg1f1fcq {
  margin-bottom: var(--r4uo657);
}
._1eg1f1fcu {
  margin-bottom: var(--r4uo658);
}
._1eg1f1fcy {
  margin-bottom: 0;
}
._1eg1f1fd2 {
  margin-right: var(--r4uo650);
}
._1eg1f1fd6 {
  margin-right: var(--r4uo651);
}
._1eg1f1fda {
  margin-right: var(--r4uo652);
}
._1eg1f1fde {
  margin-right: var(--r4uo653);
}
._1eg1f1fdi {
  margin-right: var(--r4uo654);
}
._1eg1f1fdm {
  margin-right: var(--r4uo655);
}
._1eg1f1fdq {
  margin-right: var(--r4uo656);
}
._1eg1f1fdu {
  margin-right: var(--r4uo657);
}
._1eg1f1fdy {
  margin-right: var(--r4uo658);
}
._1eg1f1fe2 {
  margin-right: 0;
}
._1eg1f1fe6 {
  margin-left: var(--r4uo650);
}
._1eg1f1fea {
  margin-left: var(--r4uo651);
}
._1eg1f1fee {
  margin-left: var(--r4uo652);
}
._1eg1f1fei {
  margin-left: var(--r4uo653);
}
._1eg1f1fem {
  margin-left: var(--r4uo654);
}
._1eg1f1feq {
  margin-left: var(--r4uo655);
}
._1eg1f1feu {
  margin-left: var(--r4uo656);
}
._1eg1f1fey {
  margin-left: var(--r4uo657);
}
._1eg1f1ff2 {
  margin-left: var(--r4uo658);
}
._1eg1f1ff6 {
  margin-left: 0;
}
._1eg1f1ffa {
  align-items: flex-start;
}
._1eg1f1ffe {
  align-items: center;
}
._1eg1f1ffi {
  align-items: flex-end;
}
._1eg1f1ffm {
  justify-content: flex-start;
}
._1eg1f1ffq {
  justify-content: center;
}
._1eg1f1ffu {
  justify-content: flex-end;
}
._1eg1f1ffy {
  justify-content: space-between;
}
._1eg1f1fg2 {
  flex-direction: row;
}
._1eg1f1fg6 {
  flex-direction: row-reverse;
}
._1eg1f1fga {
  flex-direction: column;
}
._1eg1f1fge {
  flex-direction: column-reverse;
}
._1eg1f1fgi {
  flex-wrap: wrap;
}
._1eg1f1fgm {
  flex-wrap: nowrap;
}
._1eg1f1fgq {
  flex-shrink: 0;
}
._1eg1f1fgu {
  flex-grow: 0;
}
._1eg1f1fgy {
  flex-grow: 1;
}
._1eg1f1fh2 {
  text-align: left;
}
._1eg1f1fh6 {
  text-align: center;
}
._1eg1f1fha {
  text-align: right;
}
@media screen and (min-width: 740px) {
  ._1eg1f1f4v {
    display: none;
  }
  ._1eg1f1f4z {
    display: block;
  }
  ._1eg1f1f53 {
    display: inline;
  }
  ._1eg1f1f57 {
    display: inline-block;
  }
  ._1eg1f1f5b {
    display: flex;
  }
  ._1eg1f1f5f {
    position: relative;
  }
  ._1eg1f1f5j {
    position: absolute;
  }
  ._1eg1f1f5n {
    position: fixed;
  }
  ._1eg1f1f5r {
    border-radius: 0;
  }
  ._1eg1f1f5v {
    border-radius: 9999px;
  }
  ._1eg1f1f5z {
    border-radius: var(--r4uo65b);
  }
  ._1eg1f1f63 {
    border-radius: var(--r4uo65c);
  }
  ._1eg1f1f67 {
    border-radius: var(--r4uo65d);
  }
  ._1eg1f1f6b {
    border-radius: var(--r4uo65e);
  }
  ._1eg1f1f6f {
    padding-top: var(--r4uo650);
  }
  ._1eg1f1f6j {
    padding-top: var(--r4uo651);
  }
  ._1eg1f1f6n {
    padding-top: var(--r4uo652);
  }
  ._1eg1f1f6r {
    padding-top: var(--r4uo653);
  }
  ._1eg1f1f6v {
    padding-top: var(--r4uo654);
  }
  ._1eg1f1f6z {
    padding-top: var(--r4uo655);
  }
  ._1eg1f1f73 {
    padding-top: var(--r4uo656);
  }
  ._1eg1f1f77 {
    padding-top: var(--r4uo657);
  }
  ._1eg1f1f7b {
    padding-top: var(--r4uo658);
  }
  ._1eg1f1f7f {
    padding-top: 0;
  }
  ._1eg1f1f7j {
    padding-bottom: var(--r4uo650);
  }
  ._1eg1f1f7n {
    padding-bottom: var(--r4uo651);
  }
  ._1eg1f1f7r {
    padding-bottom: var(--r4uo652);
  }
  ._1eg1f1f7v {
    padding-bottom: var(--r4uo653);
  }
  ._1eg1f1f7z {
    padding-bottom: var(--r4uo654);
  }
  ._1eg1f1f83 {
    padding-bottom: var(--r4uo655);
  }
  ._1eg1f1f87 {
    padding-bottom: var(--r4uo656);
  }
  ._1eg1f1f8b {
    padding-bottom: var(--r4uo657);
  }
  ._1eg1f1f8f {
    padding-bottom: var(--r4uo658);
  }
  ._1eg1f1f8j {
    padding-bottom: 0;
  }
  ._1eg1f1f8n {
    padding-right: var(--r4uo650);
  }
  ._1eg1f1f8r {
    padding-right: var(--r4uo651);
  }
  ._1eg1f1f8v {
    padding-right: var(--r4uo652);
  }
  ._1eg1f1f8z {
    padding-right: var(--r4uo653);
  }
  ._1eg1f1f93 {
    padding-right: var(--r4uo654);
  }
  ._1eg1f1f97 {
    padding-right: var(--r4uo655);
  }
  ._1eg1f1f9b {
    padding-right: var(--r4uo656);
  }
  ._1eg1f1f9f {
    padding-right: var(--r4uo657);
  }
  ._1eg1f1f9j {
    padding-right: var(--r4uo658);
  }
  ._1eg1f1f9n {
    padding-right: 0;
  }
  ._1eg1f1f9r {
    padding-left: var(--r4uo650);
  }
  ._1eg1f1f9v {
    padding-left: var(--r4uo651);
  }
  ._1eg1f1f9z {
    padding-left: var(--r4uo652);
  }
  ._1eg1f1fa3 {
    padding-left: var(--r4uo653);
  }
  ._1eg1f1fa7 {
    padding-left: var(--r4uo654);
  }
  ._1eg1f1fab {
    padding-left: var(--r4uo655);
  }
  ._1eg1f1faf {
    padding-left: var(--r4uo656);
  }
  ._1eg1f1faj {
    padding-left: var(--r4uo657);
  }
  ._1eg1f1fan {
    padding-left: var(--r4uo658);
  }
  ._1eg1f1far {
    padding-left: 0;
  }
  ._1eg1f1fav {
    margin-top: var(--r4uo650);
  }
  ._1eg1f1faz {
    margin-top: var(--r4uo651);
  }
  ._1eg1f1fb3 {
    margin-top: var(--r4uo652);
  }
  ._1eg1f1fb7 {
    margin-top: var(--r4uo653);
  }
  ._1eg1f1fbb {
    margin-top: var(--r4uo654);
  }
  ._1eg1f1fbf {
    margin-top: var(--r4uo655);
  }
  ._1eg1f1fbj {
    margin-top: var(--r4uo656);
  }
  ._1eg1f1fbn {
    margin-top: var(--r4uo657);
  }
  ._1eg1f1fbr {
    margin-top: var(--r4uo658);
  }
  ._1eg1f1fbv {
    margin-top: 0;
  }
  ._1eg1f1fbz {
    margin-bottom: var(--r4uo650);
  }
  ._1eg1f1fc3 {
    margin-bottom: var(--r4uo651);
  }
  ._1eg1f1fc7 {
    margin-bottom: var(--r4uo652);
  }
  ._1eg1f1fcb {
    margin-bottom: var(--r4uo653);
  }
  ._1eg1f1fcf {
    margin-bottom: var(--r4uo654);
  }
  ._1eg1f1fcj {
    margin-bottom: var(--r4uo655);
  }
  ._1eg1f1fcn {
    margin-bottom: var(--r4uo656);
  }
  ._1eg1f1fcr {
    margin-bottom: var(--r4uo657);
  }
  ._1eg1f1fcv {
    margin-bottom: var(--r4uo658);
  }
  ._1eg1f1fcz {
    margin-bottom: 0;
  }
  ._1eg1f1fd3 {
    margin-right: var(--r4uo650);
  }
  ._1eg1f1fd7 {
    margin-right: var(--r4uo651);
  }
  ._1eg1f1fdb {
    margin-right: var(--r4uo652);
  }
  ._1eg1f1fdf {
    margin-right: var(--r4uo653);
  }
  ._1eg1f1fdj {
    margin-right: var(--r4uo654);
  }
  ._1eg1f1fdn {
    margin-right: var(--r4uo655);
  }
  ._1eg1f1fdr {
    margin-right: var(--r4uo656);
  }
  ._1eg1f1fdv {
    margin-right: var(--r4uo657);
  }
  ._1eg1f1fdz {
    margin-right: var(--r4uo658);
  }
  ._1eg1f1fe3 {
    margin-right: 0;
  }
  ._1eg1f1fe7 {
    margin-left: var(--r4uo650);
  }
  ._1eg1f1feb {
    margin-left: var(--r4uo651);
  }
  ._1eg1f1fef {
    margin-left: var(--r4uo652);
  }
  ._1eg1f1fej {
    margin-left: var(--r4uo653);
  }
  ._1eg1f1fen {
    margin-left: var(--r4uo654);
  }
  ._1eg1f1fer {
    margin-left: var(--r4uo655);
  }
  ._1eg1f1fev {
    margin-left: var(--r4uo656);
  }
  ._1eg1f1fez {
    margin-left: var(--r4uo657);
  }
  ._1eg1f1ff3 {
    margin-left: var(--r4uo658);
  }
  ._1eg1f1ff7 {
    margin-left: 0;
  }
  ._1eg1f1ffb {
    align-items: flex-start;
  }
  ._1eg1f1fff {
    align-items: center;
  }
  ._1eg1f1ffj {
    align-items: flex-end;
  }
  ._1eg1f1ffn {
    justify-content: flex-start;
  }
  ._1eg1f1ffr {
    justify-content: center;
  }
  ._1eg1f1ffv {
    justify-content: flex-end;
  }
  ._1eg1f1ffz {
    justify-content: space-between;
  }
  ._1eg1f1fg3 {
    flex-direction: row;
  }
  ._1eg1f1fg7 {
    flex-direction: row-reverse;
  }
  ._1eg1f1fgb {
    flex-direction: column;
  }
  ._1eg1f1fgf {
    flex-direction: column-reverse;
  }
  ._1eg1f1fgj {
    flex-wrap: wrap;
  }
  ._1eg1f1fgn {
    flex-wrap: nowrap;
  }
  ._1eg1f1fgr {
    flex-shrink: 0;
  }
  ._1eg1f1fgv {
    flex-grow: 0;
  }
  ._1eg1f1fgz {
    flex-grow: 1;
  }
  ._1eg1f1fh3 {
    text-align: left;
  }
  ._1eg1f1fh7 {
    text-align: center;
  }
  ._1eg1f1fhb {
    text-align: right;
  }
}
@media screen and (min-width: 992px) {
  ._1eg1f1f4w {
    display: none;
  }
  ._1eg1f1f50 {
    display: block;
  }
  ._1eg1f1f54 {
    display: inline;
  }
  ._1eg1f1f58 {
    display: inline-block;
  }
  ._1eg1f1f5c {
    display: flex;
  }
  ._1eg1f1f5g {
    position: relative;
  }
  ._1eg1f1f5k {
    position: absolute;
  }
  ._1eg1f1f5o {
    position: fixed;
  }
  ._1eg1f1f5s {
    border-radius: 0;
  }
  ._1eg1f1f5w {
    border-radius: 9999px;
  }
  ._1eg1f1f60 {
    border-radius: var(--r4uo65b);
  }
  ._1eg1f1f64 {
    border-radius: var(--r4uo65c);
  }
  ._1eg1f1f68 {
    border-radius: var(--r4uo65d);
  }
  ._1eg1f1f6c {
    border-radius: var(--r4uo65e);
  }
  ._1eg1f1f6g {
    padding-top: var(--r4uo650);
  }
  ._1eg1f1f6k {
    padding-top: var(--r4uo651);
  }
  ._1eg1f1f6o {
    padding-top: var(--r4uo652);
  }
  ._1eg1f1f6s {
    padding-top: var(--r4uo653);
  }
  ._1eg1f1f6w {
    padding-top: var(--r4uo654);
  }
  ._1eg1f1f70 {
    padding-top: var(--r4uo655);
  }
  ._1eg1f1f74 {
    padding-top: var(--r4uo656);
  }
  ._1eg1f1f78 {
    padding-top: var(--r4uo657);
  }
  ._1eg1f1f7c {
    padding-top: var(--r4uo658);
  }
  ._1eg1f1f7g {
    padding-top: 0;
  }
  ._1eg1f1f7k {
    padding-bottom: var(--r4uo650);
  }
  ._1eg1f1f7o {
    padding-bottom: var(--r4uo651);
  }
  ._1eg1f1f7s {
    padding-bottom: var(--r4uo652);
  }
  ._1eg1f1f7w {
    padding-bottom: var(--r4uo653);
  }
  ._1eg1f1f80 {
    padding-bottom: var(--r4uo654);
  }
  ._1eg1f1f84 {
    padding-bottom: var(--r4uo655);
  }
  ._1eg1f1f88 {
    padding-bottom: var(--r4uo656);
  }
  ._1eg1f1f8c {
    padding-bottom: var(--r4uo657);
  }
  ._1eg1f1f8g {
    padding-bottom: var(--r4uo658);
  }
  ._1eg1f1f8k {
    padding-bottom: 0;
  }
  ._1eg1f1f8o {
    padding-right: var(--r4uo650);
  }
  ._1eg1f1f8s {
    padding-right: var(--r4uo651);
  }
  ._1eg1f1f8w {
    padding-right: var(--r4uo652);
  }
  ._1eg1f1f90 {
    padding-right: var(--r4uo653);
  }
  ._1eg1f1f94 {
    padding-right: var(--r4uo654);
  }
  ._1eg1f1f98 {
    padding-right: var(--r4uo655);
  }
  ._1eg1f1f9c {
    padding-right: var(--r4uo656);
  }
  ._1eg1f1f9g {
    padding-right: var(--r4uo657);
  }
  ._1eg1f1f9k {
    padding-right: var(--r4uo658);
  }
  ._1eg1f1f9o {
    padding-right: 0;
  }
  ._1eg1f1f9s {
    padding-left: var(--r4uo650);
  }
  ._1eg1f1f9w {
    padding-left: var(--r4uo651);
  }
  ._1eg1f1fa0 {
    padding-left: var(--r4uo652);
  }
  ._1eg1f1fa4 {
    padding-left: var(--r4uo653);
  }
  ._1eg1f1fa8 {
    padding-left: var(--r4uo654);
  }
  ._1eg1f1fac {
    padding-left: var(--r4uo655);
  }
  ._1eg1f1fag {
    padding-left: var(--r4uo656);
  }
  ._1eg1f1fak {
    padding-left: var(--r4uo657);
  }
  ._1eg1f1fao {
    padding-left: var(--r4uo658);
  }
  ._1eg1f1fas {
    padding-left: 0;
  }
  ._1eg1f1faw {
    margin-top: var(--r4uo650);
  }
  ._1eg1f1fb0 {
    margin-top: var(--r4uo651);
  }
  ._1eg1f1fb4 {
    margin-top: var(--r4uo652);
  }
  ._1eg1f1fb8 {
    margin-top: var(--r4uo653);
  }
  ._1eg1f1fbc {
    margin-top: var(--r4uo654);
  }
  ._1eg1f1fbg {
    margin-top: var(--r4uo655);
  }
  ._1eg1f1fbk {
    margin-top: var(--r4uo656);
  }
  ._1eg1f1fbo {
    margin-top: var(--r4uo657);
  }
  ._1eg1f1fbs {
    margin-top: var(--r4uo658);
  }
  ._1eg1f1fbw {
    margin-top: 0;
  }
  ._1eg1f1fc0 {
    margin-bottom: var(--r4uo650);
  }
  ._1eg1f1fc4 {
    margin-bottom: var(--r4uo651);
  }
  ._1eg1f1fc8 {
    margin-bottom: var(--r4uo652);
  }
  ._1eg1f1fcc {
    margin-bottom: var(--r4uo653);
  }
  ._1eg1f1fcg {
    margin-bottom: var(--r4uo654);
  }
  ._1eg1f1fck {
    margin-bottom: var(--r4uo655);
  }
  ._1eg1f1fco {
    margin-bottom: var(--r4uo656);
  }
  ._1eg1f1fcs {
    margin-bottom: var(--r4uo657);
  }
  ._1eg1f1fcw {
    margin-bottom: var(--r4uo658);
  }
  ._1eg1f1fd0 {
    margin-bottom: 0;
  }
  ._1eg1f1fd4 {
    margin-right: var(--r4uo650);
  }
  ._1eg1f1fd8 {
    margin-right: var(--r4uo651);
  }
  ._1eg1f1fdc {
    margin-right: var(--r4uo652);
  }
  ._1eg1f1fdg {
    margin-right: var(--r4uo653);
  }
  ._1eg1f1fdk {
    margin-right: var(--r4uo654);
  }
  ._1eg1f1fdo {
    margin-right: var(--r4uo655);
  }
  ._1eg1f1fds {
    margin-right: var(--r4uo656);
  }
  ._1eg1f1fdw {
    margin-right: var(--r4uo657);
  }
  ._1eg1f1fe0 {
    margin-right: var(--r4uo658);
  }
  ._1eg1f1fe4 {
    margin-right: 0;
  }
  ._1eg1f1fe8 {
    margin-left: var(--r4uo650);
  }
  ._1eg1f1fec {
    margin-left: var(--r4uo651);
  }
  ._1eg1f1feg {
    margin-left: var(--r4uo652);
  }
  ._1eg1f1fek {
    margin-left: var(--r4uo653);
  }
  ._1eg1f1feo {
    margin-left: var(--r4uo654);
  }
  ._1eg1f1fes {
    margin-left: var(--r4uo655);
  }
  ._1eg1f1few {
    margin-left: var(--r4uo656);
  }
  ._1eg1f1ff0 {
    margin-left: var(--r4uo657);
  }
  ._1eg1f1ff4 {
    margin-left: var(--r4uo658);
  }
  ._1eg1f1ff8 {
    margin-left: 0;
  }
  ._1eg1f1ffc {
    align-items: flex-start;
  }
  ._1eg1f1ffg {
    align-items: center;
  }
  ._1eg1f1ffk {
    align-items: flex-end;
  }
  ._1eg1f1ffo {
    justify-content: flex-start;
  }
  ._1eg1f1ffs {
    justify-content: center;
  }
  ._1eg1f1ffw {
    justify-content: flex-end;
  }
  ._1eg1f1fg0 {
    justify-content: space-between;
  }
  ._1eg1f1fg4 {
    flex-direction: row;
  }
  ._1eg1f1fg8 {
    flex-direction: row-reverse;
  }
  ._1eg1f1fgc {
    flex-direction: column;
  }
  ._1eg1f1fgg {
    flex-direction: column-reverse;
  }
  ._1eg1f1fgk {
    flex-wrap: wrap;
  }
  ._1eg1f1fgo {
    flex-wrap: nowrap;
  }
  ._1eg1f1fgs {
    flex-shrink: 0;
  }
  ._1eg1f1fgw {
    flex-grow: 0;
  }
  ._1eg1f1fh0 {
    flex-grow: 1;
  }
  ._1eg1f1fh4 {
    text-align: left;
  }
  ._1eg1f1fh8 {
    text-align: center;
  }
  ._1eg1f1fhc {
    text-align: right;
  }
}
@media screen and (min-width: 1200px) {
  ._1eg1f1f4x {
    display: none;
  }
  ._1eg1f1f51 {
    display: block;
  }
  ._1eg1f1f55 {
    display: inline;
  }
  ._1eg1f1f59 {
    display: inline-block;
  }
  ._1eg1f1f5d {
    display: flex;
  }
  ._1eg1f1f5h {
    position: relative;
  }
  ._1eg1f1f5l {
    position: absolute;
  }
  ._1eg1f1f5p {
    position: fixed;
  }
  ._1eg1f1f5t {
    border-radius: 0;
  }
  ._1eg1f1f5x {
    border-radius: 9999px;
  }
  ._1eg1f1f61 {
    border-radius: var(--r4uo65b);
  }
  ._1eg1f1f65 {
    border-radius: var(--r4uo65c);
  }
  ._1eg1f1f69 {
    border-radius: var(--r4uo65d);
  }
  ._1eg1f1f6d {
    border-radius: var(--r4uo65e);
  }
  ._1eg1f1f6h {
    padding-top: var(--r4uo650);
  }
  ._1eg1f1f6l {
    padding-top: var(--r4uo651);
  }
  ._1eg1f1f6p {
    padding-top: var(--r4uo652);
  }
  ._1eg1f1f6t {
    padding-top: var(--r4uo653);
  }
  ._1eg1f1f6x {
    padding-top: var(--r4uo654);
  }
  ._1eg1f1f71 {
    padding-top: var(--r4uo655);
  }
  ._1eg1f1f75 {
    padding-top: var(--r4uo656);
  }
  ._1eg1f1f79 {
    padding-top: var(--r4uo657);
  }
  ._1eg1f1f7d {
    padding-top: var(--r4uo658);
  }
  ._1eg1f1f7h {
    padding-top: 0;
  }
  ._1eg1f1f7l {
    padding-bottom: var(--r4uo650);
  }
  ._1eg1f1f7p {
    padding-bottom: var(--r4uo651);
  }
  ._1eg1f1f7t {
    padding-bottom: var(--r4uo652);
  }
  ._1eg1f1f7x {
    padding-bottom: var(--r4uo653);
  }
  ._1eg1f1f81 {
    padding-bottom: var(--r4uo654);
  }
  ._1eg1f1f85 {
    padding-bottom: var(--r4uo655);
  }
  ._1eg1f1f89 {
    padding-bottom: var(--r4uo656);
  }
  ._1eg1f1f8d {
    padding-bottom: var(--r4uo657);
  }
  ._1eg1f1f8h {
    padding-bottom: var(--r4uo658);
  }
  ._1eg1f1f8l {
    padding-bottom: 0;
  }
  ._1eg1f1f8p {
    padding-right: var(--r4uo650);
  }
  ._1eg1f1f8t {
    padding-right: var(--r4uo651);
  }
  ._1eg1f1f8x {
    padding-right: var(--r4uo652);
  }
  ._1eg1f1f91 {
    padding-right: var(--r4uo653);
  }
  ._1eg1f1f95 {
    padding-right: var(--r4uo654);
  }
  ._1eg1f1f99 {
    padding-right: var(--r4uo655);
  }
  ._1eg1f1f9d {
    padding-right: var(--r4uo656);
  }
  ._1eg1f1f9h {
    padding-right: var(--r4uo657);
  }
  ._1eg1f1f9l {
    padding-right: var(--r4uo658);
  }
  ._1eg1f1f9p {
    padding-right: 0;
  }
  ._1eg1f1f9t {
    padding-left: var(--r4uo650);
  }
  ._1eg1f1f9x {
    padding-left: var(--r4uo651);
  }
  ._1eg1f1fa1 {
    padding-left: var(--r4uo652);
  }
  ._1eg1f1fa5 {
    padding-left: var(--r4uo653);
  }
  ._1eg1f1fa9 {
    padding-left: var(--r4uo654);
  }
  ._1eg1f1fad {
    padding-left: var(--r4uo655);
  }
  ._1eg1f1fah {
    padding-left: var(--r4uo656);
  }
  ._1eg1f1fal {
    padding-left: var(--r4uo657);
  }
  ._1eg1f1fap {
    padding-left: var(--r4uo658);
  }
  ._1eg1f1fat {
    padding-left: 0;
  }
  ._1eg1f1fax {
    margin-top: var(--r4uo650);
  }
  ._1eg1f1fb1 {
    margin-top: var(--r4uo651);
  }
  ._1eg1f1fb5 {
    margin-top: var(--r4uo652);
  }
  ._1eg1f1fb9 {
    margin-top: var(--r4uo653);
  }
  ._1eg1f1fbd {
    margin-top: var(--r4uo654);
  }
  ._1eg1f1fbh {
    margin-top: var(--r4uo655);
  }
  ._1eg1f1fbl {
    margin-top: var(--r4uo656);
  }
  ._1eg1f1fbp {
    margin-top: var(--r4uo657);
  }
  ._1eg1f1fbt {
    margin-top: var(--r4uo658);
  }
  ._1eg1f1fbx {
    margin-top: 0;
  }
  ._1eg1f1fc1 {
    margin-bottom: var(--r4uo650);
  }
  ._1eg1f1fc5 {
    margin-bottom: var(--r4uo651);
  }
  ._1eg1f1fc9 {
    margin-bottom: var(--r4uo652);
  }
  ._1eg1f1fcd {
    margin-bottom: var(--r4uo653);
  }
  ._1eg1f1fch {
    margin-bottom: var(--r4uo654);
  }
  ._1eg1f1fcl {
    margin-bottom: var(--r4uo655);
  }
  ._1eg1f1fcp {
    margin-bottom: var(--r4uo656);
  }
  ._1eg1f1fct {
    margin-bottom: var(--r4uo657);
  }
  ._1eg1f1fcx {
    margin-bottom: var(--r4uo658);
  }
  ._1eg1f1fd1 {
    margin-bottom: 0;
  }
  ._1eg1f1fd5 {
    margin-right: var(--r4uo650);
  }
  ._1eg1f1fd9 {
    margin-right: var(--r4uo651);
  }
  ._1eg1f1fdd {
    margin-right: var(--r4uo652);
  }
  ._1eg1f1fdh {
    margin-right: var(--r4uo653);
  }
  ._1eg1f1fdl {
    margin-right: var(--r4uo654);
  }
  ._1eg1f1fdp {
    margin-right: var(--r4uo655);
  }
  ._1eg1f1fdt {
    margin-right: var(--r4uo656);
  }
  ._1eg1f1fdx {
    margin-right: var(--r4uo657);
  }
  ._1eg1f1fe1 {
    margin-right: var(--r4uo658);
  }
  ._1eg1f1fe5 {
    margin-right: 0;
  }
  ._1eg1f1fe9 {
    margin-left: var(--r4uo650);
  }
  ._1eg1f1fed {
    margin-left: var(--r4uo651);
  }
  ._1eg1f1feh {
    margin-left: var(--r4uo652);
  }
  ._1eg1f1fel {
    margin-left: var(--r4uo653);
  }
  ._1eg1f1fep {
    margin-left: var(--r4uo654);
  }
  ._1eg1f1fet {
    margin-left: var(--r4uo655);
  }
  ._1eg1f1fex {
    margin-left: var(--r4uo656);
  }
  ._1eg1f1ff1 {
    margin-left: var(--r4uo657);
  }
  ._1eg1f1ff5 {
    margin-left: var(--r4uo658);
  }
  ._1eg1f1ff9 {
    margin-left: 0;
  }
  ._1eg1f1ffd {
    align-items: flex-start;
  }
  ._1eg1f1ffh {
    align-items: center;
  }
  ._1eg1f1ffl {
    align-items: flex-end;
  }
  ._1eg1f1ffp {
    justify-content: flex-start;
  }
  ._1eg1f1fft {
    justify-content: center;
  }
  ._1eg1f1ffx {
    justify-content: flex-end;
  }
  ._1eg1f1fg1 {
    justify-content: space-between;
  }
  ._1eg1f1fg5 {
    flex-direction: row;
  }
  ._1eg1f1fg9 {
    flex-direction: row-reverse;
  }
  ._1eg1f1fgd {
    flex-direction: column;
  }
  ._1eg1f1fgh {
    flex-direction: column-reverse;
  }
  ._1eg1f1fgl {
    flex-wrap: wrap;
  }
  ._1eg1f1fgp {
    flex-wrap: nowrap;
  }
  ._1eg1f1fgt {
    flex-shrink: 0;
  }
  ._1eg1f1fgx {
    flex-grow: 0;
  }
  ._1eg1f1fh1 {
    flex-grow: 1;
  }
  ._1eg1f1fh5 {
    text-align: left;
  }
  ._1eg1f1fh9 {
    text-align: center;
  }
  ._1eg1f1fhd {
    text-align: right;
  }
}
.mowtpn4 {
  font-size: var(--mowtpn0);
  line-height: var(--mowtpn1);
}
.mowtpn4:before {
  content: "";
  display: table;
  margin-bottom: var(--mowtpn2);
}
.mowtpn4:after {
  content: "";
  display: table;
  margin-top: var(--mowtpn3);
}
._1e31qyr0 {
  font-family: var(--r4uo652w);
}
._1e31qyr1 {
  font-weight: var(--r4uo6546);
}
._1e31qyr2 {
  font-weight: var(--r4uo6547);
}
._1e31qyr3 {
  font-weight: var(--r4uo6548);
}
._1e31qyr4 {
  --mowtpn0: var(--r4uo6532);
  --mowtpn1: var(--r4uo6533);
  --mowtpn2: var(--r4uo6535);
  --mowtpn3: var(--r4uo6536);
}
._1e31qyr7 {
  --mowtpn0: var(--r4uo653c);
  --mowtpn1: var(--r4uo653d);
  --mowtpn2: var(--r4uo653f);
  --mowtpn3: var(--r4uo653g);
}
._1e31qyra {
  --mowtpn0: var(--r4uo653m);
  --mowtpn1: var(--r4uo653n);
  --mowtpn2: var(--r4uo653p);
  --mowtpn3: var(--r4uo653q);
}
._1e31qyrd {
  --mowtpn0: var(--r4uo653w);
  --mowtpn1: var(--r4uo653x);
  --mowtpn2: var(--r4uo653z);
  --mowtpn3: var(--r4uo6540);
}
._1e31qyrg {
  font-size: var(--r4uo6532);
  line-height: var(--r4uo6533);
}
._1e31qyrh {
  font-size: var(--r4uo653c);
  line-height: var(--r4uo653d);
}
._1e31qyri {
  font-size: var(--r4uo653m);
  line-height: var(--r4uo653n);
}
._1e31qyrj {
  font-size: var(--r4uo653w);
  line-height: var(--r4uo653x);
}
._1e31qyrk {
  font-weight: var(--r4uo655d);
}
._1e31qyrl {
  font-weight: var(--r4uo655e);
}
._1e31qyrm {
  --mowtpn0: var(--r4uo6549);
  --mowtpn1: var(--r4uo654a);
  --mowtpn2: var(--r4uo654c);
  --mowtpn3: var(--r4uo654d);
}
._1e31qyrp {
  --mowtpn0: var(--r4uo654j);
  --mowtpn1: var(--r4uo654k);
  --mowtpn2: var(--r4uo654m);
  --mowtpn3: var(--r4uo654n);
}
._1e31qyrs {
  --mowtpn0: var(--r4uo654t);
  --mowtpn1: var(--r4uo654u);
  --mowtpn2: var(--r4uo654w);
  --mowtpn3: var(--r4uo654x);
}
._1e31qyrv {
  --mowtpn0: var(--r4uo6553);
  --mowtpn1: var(--r4uo6554);
  --mowtpn2: var(--r4uo6556);
  --mowtpn3: var(--r4uo6557);
}
html:not(._1eg1f1fz) ._1e31qyr18 {
  --_1e31qyry: var(--r4uo6519);
  --_1e31qyrz: var(--r4uo6517);
  --_1e31qyr10: var(--r4uo651d);
  --_1e31qyr11: var(--r4uo651o);
  --_1e31qyr12: var(--r4uo651m);
  --_1e31qyr13: var(--r4uo6515);
  --_1e31qyr14: var(--r4uo651b);
  --_1e31qyr15: var(--r4uo651k);
  --_1e31qyr16: var(--r4uo651r);
  --_1e31qyr17: var(--r4uo651f);
}
html:not(._1eg1f1fz) ._1e31qyr19 {
  --_1e31qyry: var(--r4uo651a);
  --_1e31qyrz: var(--r4uo6518);
  --_1e31qyr10: var(--r4uo651e);
  --_1e31qyr11: var(--r4uo651p);
  --_1e31qyr12: var(--r4uo651n);
  --_1e31qyr13: var(--r4uo6516);
  --_1e31qyr14: var(--r4uo651c);
  --_1e31qyr15: var(--r4uo651l);
  --_1e31qyr16: var(--r4uo651s);
  --_1e31qyr17: var(--r4uo651h);
}
html._1eg1f1fz ._1e31qyr1a {
  --_1e31qyry: var(--r4uo6519);
  --_1e31qyrz: var(--r4uo6517);
  --_1e31qyr10: var(--r4uo651d);
  --_1e31qyr11: var(--r4uo651o);
  --_1e31qyr12: var(--r4uo651m);
  --_1e31qyr13: var(--r4uo6515);
  --_1e31qyr14: var(--r4uo651b);
  --_1e31qyr15: var(--r4uo651k);
  --_1e31qyr16: var(--r4uo651r);
  --_1e31qyr17: var(--r4uo651f);
}
html._1eg1f1fz ._1e31qyr1b {
  --_1e31qyry: var(--r4uo651a);
  --_1e31qyrz: var(--r4uo6518);
  --_1e31qyr10: var(--r4uo651e);
  --_1e31qyr11: var(--r4uo651p);
  --_1e31qyr12: var(--r4uo651n);
  --_1e31qyr13: var(--r4uo6516);
  --_1e31qyr14: var(--r4uo651c);
  --_1e31qyr15: var(--r4uo651l);
  --_1e31qyr16: var(--r4uo651s);
  --_1e31qyr17: var(--r4uo651h);
}
html:not(._1eg1f1fz) ._1e31qyr1c,
html:not(._1eg1f1fz) ._1e31qyr1d,
html:not(._1eg1f1fz) ._1e31qyr1e,
html:not(._1eg1f1fz) ._1e31qyr1f {
  --_1e31qyr15: var(--_1e31qyry);
}
html:not(._1eg1f1fz) ._1e31qyr1g,
html:not(._1eg1f1fz) ._1e31qyr1h {
  --_1e31qyr15: var(--_1e31qyrz);
}
html:not(._1eg1f1fz) ._1e31qyr1i {
  --_1e31qyr15: var(--_1e31qyr12);
}
html:not(._1eg1f1fz) ._1e31qyr1j {
  --_1e31qyr15: var(--_1e31qyr10);
}
html:not(._1eg1f1fz) ._1e31qyr1k {
  --_1e31qyr15: var(--_1e31qyr11);
}
html._1eg1f1fz ._1e31qyr1l,
html._1eg1f1fz ._1e31qyr1m,
html._1eg1f1fz ._1e31qyr1n,
html._1eg1f1fz ._1e31qyr1o {
  --_1e31qyr15: var(--_1e31qyry);
}
html._1eg1f1fz ._1e31qyr1p,
html._1eg1f1fz ._1e31qyr1q {
  --_1e31qyr15: var(--_1e31qyrz);
}
html._1eg1f1fz ._1e31qyr1r {
  --_1e31qyr15: var(--_1e31qyr12);
}
html._1eg1f1fz ._1e31qyr1s {
  --_1e31qyr15: var(--_1e31qyr10);
}
html._1eg1f1fz ._1e31qyr1t {
  --_1e31qyr15: var(--_1e31qyr11);
}
._1e31qyr1u {
  color: var(--_1e31qyry);
}
._1e31qyr1v {
  color: var(--_1e31qyrz);
}
._1e31qyr1w {
  color: var(--_1e31qyr10);
}
._1e31qyr1x {
  color: var(--_1e31qyr11);
}
._1e31qyr1y {
  color: var(--_1e31qyr12);
}
._1e31qyr1z {
  color: var(--_1e31qyr13);
}
._1e31qyr20 {
  color: var(--_1e31qyr14);
}
._1e31qyr21 {
  color: var(--_1e31qyr15);
}
._1e31qyr22 {
  color: var(--_1e31qyr16);
}
._1e31qyr23 {
  color: var(--_1e31qyr17);
}
._1e31qyr24 {
  padding-bottom: calc((var(--r4uo659) - var(--r4uo6533)) / 2);
  padding-top: calc((var(--r4uo659) - var(--r4uo6533)) / 2);
}
._1e31qyr25 {
  padding-bottom: calc((var(--r4uo659) - var(--r4uo653d)) / 2);
  padding-top: calc((var(--r4uo659) - var(--r4uo653d)) / 2);
}
._1e31qyr26 {
  padding-bottom: calc((var(--r4uo659) - var(--r4uo653n)) / 2);
  padding-top: calc((var(--r4uo659) - var(--r4uo653n)) / 2);
}
._1e31qyr27 {
  padding-bottom: calc((var(--r4uo659) - var(--r4uo653x)) / 2);
  padding-top: calc((var(--r4uo659) - var(--r4uo653x)) / 2);
}
@media screen and (min-width: 740px) {
  ._1e31qyr4 {
    --mowtpn0: var(--r4uo6537);
    --mowtpn1: var(--r4uo6538);
    --mowtpn2: var(--r4uo653a);
    --mowtpn3: var(--r4uo653b);
  }
  ._1e31qyr7 {
    --mowtpn0: var(--r4uo653h);
    --mowtpn1: var(--r4uo653i);
    --mowtpn2: var(--r4uo653k);
    --mowtpn3: var(--r4uo653l);
  }
  ._1e31qyra {
    --mowtpn0: var(--r4uo653r);
    --mowtpn1: var(--r4uo653s);
    --mowtpn2: var(--r4uo653u);
    --mowtpn3: var(--r4uo653v);
  }
  ._1e31qyrd {
    --mowtpn0: var(--r4uo6541);
    --mowtpn1: var(--r4uo6542);
    --mowtpn2: var(--r4uo6544);
    --mowtpn3: var(--r4uo6545);
  }
  ._1e31qyrg {
    font-size: var(--r4uo6537);
    line-height: var(--r4uo6538);
  }
  ._1e31qyrh {
    font-size: var(--r4uo653h);
    line-height: var(--r4uo653i);
  }
  ._1e31qyri {
    font-size: var(--r4uo653r);
    line-height: var(--r4uo653s);
  }
  ._1e31qyrj {
    font-size: var(--r4uo6541);
    line-height: var(--r4uo6542);
  }
  ._1e31qyrm {
    --mowtpn0: var(--r4uo654e);
    --mowtpn1: var(--r4uo654f);
    --mowtpn2: var(--r4uo654h);
    --mowtpn3: var(--r4uo654i);
  }
  ._1e31qyrp {
    --mowtpn0: var(--r4uo654o);
    --mowtpn1: var(--r4uo654p);
    --mowtpn2: var(--r4uo654r);
    --mowtpn3: var(--r4uo654s);
  }
  ._1e31qyrs {
    --mowtpn0: var(--r4uo654y);
    --mowtpn1: var(--r4uo654z);
    --mowtpn2: var(--r4uo6551);
    --mowtpn3: var(--r4uo6552);
  }
  ._1e31qyrv {
    --mowtpn0: var(--r4uo6558);
    --mowtpn1: var(--r4uo6559);
    --mowtpn2: var(--r4uo655b);
    --mowtpn3: var(--r4uo655c);
  }
  ._1e31qyr24 {
    padding-bottom: calc((var(--r4uo659) - var(--r4uo6538)) / 2);
    padding-top: calc((var(--r4uo659) - var(--r4uo6538)) / 2);
  }
  ._1e31qyr25 {
    padding-bottom: calc((var(--r4uo659) - var(--r4uo653i)) / 2);
    padding-top: calc((var(--r4uo659) - var(--r4uo653i)) / 2);
  }
  ._1e31qyr26 {
    padding-bottom: calc((var(--r4uo659) - var(--r4uo653s)) / 2);
    padding-top: calc((var(--r4uo659) - var(--r4uo653s)) / 2);
  }
  ._1e31qyr27 {
    padding-bottom: calc((var(--r4uo659) - var(--r4uo6542)) / 2);
    padding-top: calc((var(--r4uo659) - var(--r4uo6542)) / 2);
  }
}
._1jnuepa0 {
  --r4uo650: 24px;
  --r4uo651: 4px;
  --r4uo652: 8px;
  --r4uo653: 12px;
  --r4uo654: 20px;
  --r4uo655: 32px;
  --r4uo656: 48px;
  --r4uo657: 96px;
  --r4uo658: 120px;
  --r4uo659: 44px;
  --r4uo65a: 4px;
  --r4uo65b: 2px;
  --r4uo65c: 4px;
  --r4uo65d: 6px;
  --r4uo65e: 10px;
  --r4uo65f: #e60278;
  --r4uo65g: #f8b1dc;
  --r4uo65h: #fdc221;
  --r4uo65i: #fee384;
  --r4uo65j: #b91e1e;
  --r4uo65k: #fb999a;
  --r4uo65l: #838fa5;
  --r4uo65m: rgba(159, 176, 245, 0.7);
  --r4uo65n: #4964e9;
  --r4uo65o: #9fb0f5;
  --r4uo65p: #1d559d;
  --r4uo65q: #98c9f1;
  --r4uo65r: #2e3849;
  --r4uo65t: #d2d7df;
  --r4uo65s: #fff;
  --r4uo65u: #12784f;
  --r4uo65v: #8bdec5;
  --r4uo65w: #512eaa;
  --r4uo65x: #c6acf5;
  --r4uo65y: 1px;
  --r4uo65z: 2px;
  --r4uo6510: 3px;
  --r4uo6511: 400px;
  --r4uo6512: 660px;
  --r4uo6513: 940px;
  --r4uo6514: 1280px;
  --r4uo6515: #e60278;
  --r4uo6516: #f8b1dc;
  --r4uo6517: #723d02;
  --r4uo6518: #fee384;
  --r4uo6519: #b91e1e;
  --r4uo651a: #fb999a;
  --r4uo651b: #4964e9;
  --r4uo651c: #9fb0f5;
  --r4uo651d: #1d559d;
  --r4uo651e: #98c9f1;
  --r4uo651f: #4964e9;
  --r4uo651h: #9fb0f5;
  --r4uo651g: #4964e9;
  --r4uo651i: #512eaa;
  --r4uo651j: #c6acf5;
  --r4uo651k: #2e3849;
  --r4uo651l: #fff;
  --r4uo651m: #12784f;
  --r4uo651n: #8bdec5;
  --r4uo651o: #512eaa;
  --r4uo651p: #c6acf5;
  --r4uo651q: #f57c00;
  --r4uo651r: #5a6881;
  --r4uo651s: hsla(0, 0%, 100%, 0.65);
  --r4uo651t: #f7f8fb;
  --r4uo651u: #0e131b;
  --r4uo651v: #0d3880;
  --r4uo651w: #e60278;
  --r4uo651x: #cd026b;
  --r4uo651y: #fd0585;
  --r4uo651z: #feeffa;
  --r4uo6520: #fdd7f3;
  --r4uo6521: #fde3f6;
  --r4uo6522: #fdc221;
  --r4uo6523: #fef8de;
  --r4uo6524: #b91e1e;
  --r4uo6525: #a31a1a;
  --r4uo6526: #db1616;
  --r4uo6527: #ffe3e2;
  --r4uo6528: #fef3f3;
  --r4uo6529: #fcdbdb;
  --r4uo652a: #fde7e7;
  --r4uo652b: #4964e9;
  --r4uo652c: #3251e6;
  --r4uo652d: #5975ff;
  --r4uo652e: #f4f6fe;
  --r4uo652f: #dde3fc;
  --r4uo652g: #e8ecfd;
  --r4uo652h: #1d559d;
  --r4uo652i: #e3f2fb;
  --r4uo652j: #2e3849;
  --r4uo652k: #242c39;
  --r4uo652l: #384459;
  --r4uo652m: #eaecf1;
  --r4uo652n: #f7f8fb;
  --r4uo652o: #e6e9f3;
  --r4uo652p: #eff1f7;
  --r4uo652q: #12784f;
  --r4uo652r: #e2f7f1;
  --r4uo652s: #512eaa;
  --r4uo652t: #f1e8fd;
  --r4uo652u: #fff;
  --r4uo652v: #1c2330;
  --r4uo652w: Roboto, "Helvetica Neue", HelveticaNeue, Helvetica, Arial,
    sans-serif;
  --r4uo652x: 1456;
  --r4uo652y: 1900;
  --r4uo652z: -500;
  --r4uo6530: 0;
  --r4uo6531: 2048;
  --r4uo6532: 12px;
  --r4uo6533: 20px;
  --r4uo6534: 8.5313px;
  --r4uo6535: -0.4642em;
  --r4uo6536: -0.4915em;
  --r4uo6537: 12px;
  --r4uo6538: 20px;
  --r4uo6539: 8.5313px;
  --r4uo653a: -0.4642em;
  --r4uo653b: -0.4915em;
  --r4uo653c: 14px;
  --r4uo653d: 20px;
  --r4uo653e: 9.9531px;
  --r4uo653f: -0.3451em;
  --r4uo653g: -0.3725em;
  --r4uo653h: 14px;
  --r4uo653i: 20px;
  --r4uo653j: 9.9531px;
  --r4uo653k: -0.3451em;
  --r4uo653l: -0.3725em;
  --r4uo653m: 16px;
  --r4uo653n: 24px;
  --r4uo653o: 11.375px;
  --r4uo653p: -0.3809em;
  --r4uo653q: -0.4082em;
  --r4uo653r: 16px;
  --r4uo653s: 24px;
  --r4uo653t: 11.375px;
  --r4uo653u: -0.3809em;
  --r4uo653v: -0.4082em;
  --r4uo653w: 18px;
  --r4uo653x: 28px;
  --r4uo653y: 12.7969px;
  --r4uo653z: -0.4086em;
  --r4uo6540: -0.436em;
  --r4uo6541: 18px;
  --r4uo6542: 28px;
  --r4uo6543: 12.7969px;
  --r4uo6544: -0.4086em;
  --r4uo6545: -0.436em;
  --r4uo6546: 400;
  --r4uo6547: 600;
  --r4uo6548: 700;
  --r4uo6549: 28px;
  --r4uo654a: 36px;
  --r4uo654b: 19.9063px;
  --r4uo654c: -0.2737em;
  --r4uo654d: -0.3011em;
  --r4uo654e: 42px;
  --r4uo654f: 44px;
  --r4uo654g: 29.8594px;
  --r4uo654h: -0.1547em;
  --r4uo654i: -0.182em;
  --r4uo654j: 21px;
  --r4uo654k: 32px;
  --r4uo654l: 14.9297px;
  --r4uo654m: -0.3928em;
  --r4uo654n: -0.4201em;
  --r4uo654o: 28px;
  --r4uo654p: 36px;
  --r4uo654q: 19.9063px;
  --r4uo654r: -0.2737em;
  --r4uo654s: -0.3011em;
  --r4uo654t: 21px;
  --r4uo654u: 28px;
  --r4uo654v: 14.9297px;
  --r4uo654w: -0.2975em;
  --r4uo654x: -0.3249em;
  --r4uo654y: 21px;
  --r4uo654z: 28px;
  --r4uo6550: 14.9297px;
  --r4uo6551: -0.2975em;
  --r4uo6552: -0.3249em;
  --r4uo6553: 18px;
  --r4uo6554: 28px;
  --r4uo6555: 12.7969px;
  --r4uo6556: -0.4086em;
  --r4uo6557: -0.436em;
  --r4uo6558: 18px;
  --r4uo6559: 28px;
  --r4uo655a: 12.7969px;
  --r4uo655b: -0.4086em;
  --r4uo655c: -0.436em;
  --r4uo655d: 400;
  --r4uo655e: 600;
  --r4uo655f: none;
  --r4uo655g: 24px;
  --r4uo655h: 20px;
  --r4uo655i: transform 0.125s ease, opacity 0.125s ease;
  --r4uo655j: transform 0.2s cubic-bezier(0.02, 1.505, 0.745, 1.235);
  --r4uo655k: scale(0.95);
  --r4uo655l: 0 2px 4px 0px rgba(28, 35, 48, 0.1),
    0 2px 2px -2px rgba(28, 35, 48, 0.1), 0 4px 4px -4px rgba(28, 35, 48, 0.2);
  --r4uo655m: 0 2px 4px 0px rgba(28, 35, 48, 0.1),
    0 8px 8px -4px rgba(28, 35, 48, 0.1), 0 12px 12px -8px rgba(28, 35, 48, 0.2);
  --r4uo655n: 0 2px 4px 0px rgba(28, 35, 48, 0.1),
    0 12px 12px -4px rgba(28, 35, 48, 0.1),
    0 20px 20px -12px rgba(28, 35, 48, 0.2);
}
._3br6j86 {
  background: var(--_3br6j80);
}
._3br6j87 {
  background: var(--_3br6j81);
}
._3br6j88 {
  background: var(--_3br6j82);
}
._3br6j89 {
  background: var(--_3br6j83);
}
._3br6j8a {
  background: var(--_3br6j84);
}
._3br6j8b {
  background: var(--_3br6j85);
}
html:not(._1eg1f1fz) ._3br6j8c {
  --_3br6j80: var(--r4uo65w);
  --_3br6j81: var(--r4uo65p);
  --_3br6j82: var(--r4uo65u);
  --_3br6j83: var(--r4uo65h);
  --_3br6j84: var(--r4uo65j);
  --_3br6j85: var(--r4uo65n);
}
html:not(._1eg1f1fz) ._3br6j8d {
  --_3br6j80: var(--r4uo65x);
  --_3br6j81: var(--r4uo65q);
  --_3br6j82: var(--r4uo65v);
  --_3br6j83: var(--r4uo65i);
  --_3br6j84: var(--r4uo65k);
  --_3br6j85: var(--r4uo65o);
}
html._1eg1f1fz ._3br6j8e {
  --_3br6j80: var(--r4uo65w);
  --_3br6j81: var(--r4uo65p);
  --_3br6j82: var(--r4uo65u);
  --_3br6j83: var(--r4uo65h);
  --_3br6j84: var(--r4uo65j);
  --_3br6j85: var(--r4uo65n);
}
html._1eg1f1fz ._3br6j8f {
  --_3br6j80: var(--r4uo65x);
  --_3br6j81: var(--r4uo65q);
  --_3br6j82: var(--r4uo65v);
  --_3br6j83: var(--r4uo65i);
  --_3br6j84: var(--r4uo65k);
  --_3br6j85: var(--r4uo65o);
}
._3br6j8g {
  border-bottom-right-radius: 0 !important;
  border-top-right-radius: 0 !important;
}
._3br6j8h {
  width: var(--r4uo65e);
}
._3br6j8i {
  width: var(--r4uo65a);
}
._18oko3r0 {
  margin-bottom: -0.1em;
}
._18oko3r2 {
  text-overflow: ellipsis;
  white-space: nowrap;
}
._18oko3r0 ._18oko3r2 {
  padding-bottom: 0.1em;
}
@supports (display: -webkit-box) and (-webkit-line-clamp: 1) {
  ._18oko3r4 {
    display: -webkit-box;
    white-space: normal;
    -webkit-line-clamp: var(--_18oko3r3);
    -webkit-box-orient: vertical;
  }
}
,
  "main.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "main.js.LICENSE.txt": /**
 * @license React
 * react-dom.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * react-jsx-runtime.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * react.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * scheduler.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */
,
}
`;

exports[`sku-webpack-plugin start should start a development server 1`] = `
SCRIPTS: [
  "main.js",
]
CSS: [
  "main.css",
]
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta charset="utf-8">
    <title>
      Webpack App
    </title>
    <meta
      name="viewport"
      content="width=device-width, initial-scale=1"
    >
    <script
      defer
      src="scripts[0]"
    >
    </script>
    <link
      href="styles[0]"
      rel="stylesheet"
    >
  </head>
  <body>
  </body>
</html>
POST HYDRATE DIFFS: 
     >
   </head>
   <body>
+    <div>
+      <style type="text/css">
+        html,body{margin:0;padding:0;background:#F7F8FB}
+            html.sprinkles_darkMode__1eg1f1fz,html.sprinkles_darkMode__1eg1f1fz body{color-scheme:dark;background:#0E131B}
+      </style>
+      <div class="apacTheme_apac__1jnuepa0 typography_lightModeTone_light__1e31qyr18 typography_darkModeTone_dark__1e31qyr1b">
+        <div class="reset_base__1t01khz0 sprinkles_paddingBottom_gutter_mobile__1eg1f1f7i sprinkles_paddingTop_gutter_mobile__1eg1f1f6e sprinkles_paddingLeft_gutter_mobile__1eg1f1f9q sprinkles_paddingRight_gutter_mobile__1eg1f1f8m sprinkles_position_relative_mobile__1eg1f1f5e typography_lightModeTone_light__1e31qyr18 typography_darkModeTone_dark__1e31qyr1b sprinkles_background_surface_lightMode__1eg1f1f32 sprinkles_background_surfaceDark_darkMode__1eg1f1f35">
+          <span class="reset_base__1t01khz0 sprinkles_display_block_mobile__1eg1f1f4y typography_fontFamily__1e31qyr0 typography_fontWeight_regular__1e31qyr1 typography_tone_neutral__1e31qyr21 capsize_capsizeStyle__mowtpn4 typography_textSize_large__1e31qyrd">
+            Is it working?
+          </span>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
\\ No newline at end of file

`;
